--- a/Table/作業2Table.html
+++ b/Table/作業2Table.html
@@ -7,7 +7,11 @@
     <title>Document</title>
     <style>
       table {
-        width: 800px;
+        margin: auto;
+        width: 700px;
+        height: 894px;
+        font-weight: 500;
+        text-align: center;
         border: 4px double black;
       }
       th {
@@ -15,8 +19,6 @@
       }
       td {
         border: 1px solid black;
-        text-align: center;
-        flex-wrap: wrap;
       }
     </style>
   </head>
@@ -42,7 +44,8 @@
           <th rowspan="11">上午</th>
           <td></td>
           <td>10</td>
-          <td>7:50 8:00</td>
+          <td>7:50
+             8:00</td>
           <td colspan="5">教職員朝會</td>
           <td colspan="2">領域別</td>
           <td>分鐘</td>
@@ -51,8 +54,9 @@
         <tr>
           <td></td>
           <td>20</td>
-          <td>8:00 8:20</td>
-          <td colspan="5">晨光時間(兒童朝會)</td>
+          <td>8:00
+             8:20</td>
+          <td colspan="5"><p>晨光時間</p><p>(兒童朝會)</p></td>
           <td rowspan="3">語文</td>
           <td>國語</td>
           <td>240</td>
@@ -61,7 +65,8 @@
         <tr>
           <td rowspan="2"></td>
           <td rowspan="2">10</td>
-          <td rowspan="2">8:20 8:30</td>
+          <td rowspan="2">8:20
+             8:30</td>
           <td rowspan="2"colspan="5">導師時間</td>
           <td>鄉土</td>
           <td>40</td>
@@ -75,7 +80,8 @@
          <tr>
           <td rowspan="2">1</td>
           <td rowspan="2">40</td>
-          <td rowspan="2">8:40 9:20</td>
+          <td rowspan="2">8:40
+             9:20</td>
           <td rowspan="2">數學</td>
           <td rowspan="2">國語</td>
           <td rowspan="2">社會</td>
