--- a/Table/作業02切版.html
+++ b/Table/作業02切版.html
@@ -7,19 +7,19 @@
     <title>Document</title>
     <style>
       * {
-        ;
 
         /* outline: solid 1px; */
       }
       body {
         font-family: 'Noto Sans TC', 'Roboto', -apple-system, 'Avenir Next', 'Microsoft JhengHei', '微軟正黑體';
+        
       }
       li {
         list-style: none;
       }
       .container {
 
-        outline: solid 1px;
+        /* outline: solid 1px; */
       }
       .header-container {
 
@@ -90,38 +90,34 @@
         flex-direction: row;
       }
       .media-list1 {
-        margin: 24px 0 24px 230px;
+        margin: 24px 0 24px 140px;
         width: 900px;
         height: 450px;
         display: flex;
         flex-direction: row-reverse;
         justify-content: center;
         font-weight: 500;
-        justify-content: space-around;
       }
       .media-list2 {
-        margin: 24px 0 24px 230px;
+        margin: 24px 0 24px 140px;
         width: 900px;
         height: 450px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         font-weight: 500;
-        justify-content: space-around;
       }
       .media-list3 {
-        margin: 24px 0 24px 230px;
+        margin: 24px 0 24px 140px;
         width: 900px;
         height: 450px;
         display: flex;
         flex-direction: row-reverse;
         justify-content: center;
         font-weight: 500;
-        justify-content: space-around;
       }
 
       .media-list-img {
-
         width: 450px;
         height: 450px;
       }
@@ -149,17 +145,22 @@
       .feature-list {
         display: flex;
         justify-content: space-between;
+        padding-left: 1px;
+
       }
       .feature-list-wrapper {
         display: flexbox;
         text-align: center;
       }
       .feature {
-        width: 768px;
         margin-bottom: 24px;
+        margin-right: 10px;
+        margin-left: 10px;
         display: list-item;
         text-align: center;
         list-style-type: none;
+        width: 450px;
+        height: 450px;
       }
       .feature-list-heading {
         display: block;
@@ -399,7 +400,7 @@
                   <li class="feature">
                     <img class="valid-number-feature__icon" width="145" height="145" src="https://assets.whoscall.com/assets/media/images/ic-number-advisor-439a72eac8b30030a0b39d7d6562466d.svg">
                     <h3 class="feature__title">一對一專人服務</h3>
-                    <p class="feature-content">認證流程不再複雜惱人。</p>
+                    <p class="feature-content">專人服務、輕鬆申請認證流程不再複雜惱人。</p>
                   </li>
                 </ul>
               </section>
