--- a/Toyota/toyota.html
+++ b/Toyota/toyota.html
@@ -128,7 +128,7 @@
             margin-bottom: 20px;
         }
         .wrap .revolution .item .title{
-            width: 130px;
+            width: fit-content;
             background-color: black;
             color: white;
             text-align: center;
