--- a/RWD 選單切版/RWD選單切版.html
+++ b/RWD 選單切版/RWD選單切版.html
@@ -190,25 +190,126 @@
           justify-content: space-between;
           align-items: center;
         }
-        .main-menu li:hover{
+        .main-menu li:hover {
           display: flex;
           flex-direction: column;
           width: 100%;
           text-align: center;
         }
-        .main-menu{
+        .main-menu {
           position: relative;
           display: block;
         }
-        .sub-menu{
+        .sub-menu {
           display: none;
           position: relative;
-        } 
-        .main-menu .main-menu-control:hover .sub-menu{
+        }
+        .main-menu .main-menu-control:hover a {
+          border-bottom: transparent;
+        }
+        /* .main-menu .main-menu-control:hover .sub-menu {
           display: flex;
           flex-direction: column;
           width: 100%;
           text-align: center;
+        }
+        .main-menu-control:hover .sub-menu a{
+          color: black;
+        } */
+      }
+      @media screen and (width >=768px) {
+        .logo img {
+          width: 100px;
+          height: 50px;
+        }
+
+        .container {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          margin: 0 15px;
+          background-color: black;
+          padding: 10px 0;
+        }
+
+        a {
+          display: block;
+          text-decoration: none;
+          color: #fff;
+        }
+
+        .main-menu {
+          width: 100%;
+          position: relative;
+        }
+
+        .main-header {
+          line-height: 60px;
+          align-items: center;
+        }
+
+        .main-menu {
+          display: flex;
+        }
+
+        .main-menu li {
+          position: relative;
+          transition: 0.5s;
+          list-style: none;
+        }
+
+        .main-menu li a {
+          padding: 0 15px;
+          display: flex;
+          flex-wrap: wrap;
+        }
+
+        .main-menu li::after {
+          content: "";
+          position: absolute;
+          height: 4px;
+          left: 50%;
+          right: 50%;
+          bottom: 0;
+          background-color: #fff;
+          transition: 0.5s;
+        }
+
+        .main-menu li:hover {
+          background-color: #fff;
+        }
+
+        .main-menu li:hover a {
+          color: black;
+        }
+
+        .main-menu li:hover::after {
+          left: 0;
+          right: 0;
+        }
+
+        .sub-menu li:hover a {
+          text-decoration: underline;
+        }
+
+        .sub-menu {
+          position: absolute;
+          left: 100%;
+          top: 75px;
+          background-color: rgb(137, 135, 135);
+          width: 200px;
+          text-align: center;
+          transform: translate(-50%, -150%);
+          transition: 1s;
+          z-index: -1;
+        }
+
+        .main-menu li:hover .sub-menu {
+          transform: translate(-50%, 0);
+        }
+
+        #menu-control {
+          display: none;
         }
       }
     </style>
