--- a/Javascript/助教功課AppleGuessNumCalendar/apple.html
+++ b/Javascript/助教功課AppleGuessNumCalendar/apple.html
@@ -54,11 +54,11 @@
       ],
 
       [
-        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space.png', storage: "256GB", price: 51300 },
-        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space.png', storage: "512GB", price: 57300 },
-        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space.png', storage: "1TB", price: 63300 },
-        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space.png', storage: "2TB", price: 75300 },
-        { type: 'macbook', rgb: 'rgb(185, 174, 174)', color: "銀色", pic: './mbp13touch-silver.png', storage: "256GB", price: 51300 },
+        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space-gallery1-201907.png', storage: "256GB", price: 51300 },
+        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space-gallery1-201907.png', storage: "512GB", price: 57300 },
+        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space-gallery1-201907.png', storage: "1TB", price: 63300 },
+        { type: 'macbook', rgb: 'rgb(110, 105, 105)', color: "太空灰色", pic: './mbp13touch-space-gallery1-201907.png', storage: "2TB", price: 75300 },
+        { type: 'macbook', rgb: 'rgb(185, 174, 174)', color: "銀色", pic: './/mbp13touch-silver.png', storage: "256GB", price: 51300 },
         { type: 'macbook', rgb: 'rgb(185, 174, 174)', color: "銀色", pic: './mbp13touch-silver.png', storage: "512GB", price: 57300 },
         { type: 'macbook', rgb: 'rgb(185, 174, 174)', color: "銀色", pic: './mbp13touch-silver.png', storage: "1TB", price: 63300 },
         { type: 'macbook', rgb: 'rgb(185, 174, 174)', color: "銀色", pic: './mbp13touch-silver.png', storage: "2TB", price: 75300 }
